--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
         <div class="navbar">
            <a href="https://www.facebook.com/profile.php?id=100084233425631"><img src="me-logo.png " class="logo"></a>
             <ul>
-                <li><a href="about me/index.html">What I Learned</a></li>
-                <li><a href="index.html">Home</a></li>
+                <li><a href="https://keithgwapo.github.io/about/">What I Learned</a></li>
+                <li><a href="https://keithgwapo.github.io/main/">Home</a></li>
                 <li><a href="">Activities</a></li>
             </ul>
         </div>
