--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <ul class="column1">
                     <li><img src="activity1.png" class="img1"></li>
                     <li><p class="p2">Activity 1</p></li>
-                    <li><a href="activities/activity1/index.html" class="btn1">VIEW</a></li>
+                    <li><a href="https://keithgwapo.github.io/activity-1/" class="btn1">VIEW</a></li>
                 </ul>
                 <ul class="column2">
                     <li><img src="activity2.png" class="img1"></li>
