--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <ul class="column2">
                     <li><img src="activity2.png" class="img1"></li>
                     <li><p class="p2">Activity 2</p></li>
-                    <li><a href="activities/activity2/pages/index.html" class="btn1">VIEW</a></li>
+                    <li><a href="https://keithgwapo.github.io/activity-2/" class="btn1">VIEW</a></li>
                 </ul>
                 <ul class="column3">
                     <li><img src="activity3.png" class="img1"></li>
