--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <ul class="column3">
                     <li><img src="activity3.png" class="img1"></li>
                     <li><p class="p2">Activity 3</p></li>
-                    <li><a href="activities/activity3/index.html" class="btn1">VIEW</a></li>
+                    <li><a href="https://keithgwapo.github.io/activity-3/" class="btn1">VIEW</a></li>
                 </ul>
             </div>
         </section>
