--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <ul class="column1">
                     <li><img src="activity4.png" class="img1"></li>
                     <li><p class="p2">Activity 4</p></li>
-                    <li><a href="activities/activity4/pages/home.html" class="btn1">VIEW</a></li>
+                    <li><a href="https://keithgwapo.github.io/activity-4/" class="btn1">VIEW</a></li>
                 </ul>
                 <!-- <ul class="column2">
                     <li><img src="activity5.png" class="img1"></li>
