--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <ul class="column3">
                     <li><img src="activity6.png" class="img1"></li>
                     <li><p class="p2">Activity 5</p></li>
-                    <li><a href="activities/Activity6/index.html" class="btn1">VIEW</a></li>
+                    <li><a href="https://keithgwapo.github.io/activity-6/" class="btn1">VIEW</a></li>
                 </ul>
             </div>
         </section>
